--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vuepress/bundler-vite": "^2.0.0-rc.17",
     "@vuepress/plugin-search": "^2.0.0-rc.52",
     "@vuepress/theme-default": "^2.0.0-rc.52",
-    "vue": "^3.5.10",
+    "sass-embedded": "^1.79.4",
+    "vue": "^3.5.11",
     "vuepress": "^2.0.0-rc.17"
   },
   "dependencies": {
